completed the rest of the page  (done ✓ )

--- a/index.html
+++ b/index.html
@@ -276,7 +276,23 @@
         </div>
 
 
-        
+
+        <h3 class="suggestions-title">Searches related to build this webpage</h3>
+        <div class="sug-list">
+            <ul>
+                <li>how to build a website from scratch</li>
+                <li>build a website for free</li>
+                <li>web project</li>
+                <li>free website</li>
+            </ul>
+            <ul>
+                <li>build a website in a day</li>
+                <li>how to build a website from scratch</li>
+                <li>build a website for free</li>
+                <li>web project</li>
+            </ul>
+        </div>
+
     </main>
 <!-- end of the main section that contains search results -->
 
@@ -284,7 +300,20 @@
 
 
     <footer>
-
+        <div class="location">
+            <div class="location-text">
+                <span class="country">Egypt </span><span class="city">Warraq Al Arab</span>
+                <p class="location-details">- From your places (Home) - Use precise location - Learn more</p>
+            </div>
+        </div>
+        <div class="bottom-nav">
+            <ul>
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Send feedback</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
